<resources>
    <string name="app_name">BloodDriveSystem</string>
    <string name="home_description">This is a blood donation system. It only takes a few simple steps to book a blood donation. If you want to contribute your valuable blood donation to Malaysia, you can click the button in the lower right corner to continue the blood donation steps.</string>
    <string name="proceed">Proceed</string>
    <string name="blood_donation_form">Blood Donation Form</string>
    <string name="donor_s_name">Donor's Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="formemail">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="formgender">Gender</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="formphone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="formic_number">IC Number</string>
    <string name="enter_ic_number">Enter IC number</string>
    <string name="formaddress">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="select_donor_s_blood_type">Select Donor's Blood Type</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="submit">Submit</string>
    <string name="did_you_ever_donate_blood_before">Did you ever donate blood before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blood_donor_profile">Blood Donor Profile</string>
    <string name="name">Name</string>
    <string name="profilename">TextView</string>
    <string name="gender">Gender</string>
    <string name="profilegender">TextView</string>
    <string name="email">Email</string>
    <string name="profileemail">TextView</string>
    <string name="phone">Phone</string>
    <string name="profilephone">TextView</string>
    <string name="ic_number">IC Number</string>
    <string name="profileic">TextView</string>
    <string name="address">Address</string>
    <string name="profileaddress">TextView</string>
    <string name="blood_type">Blood Type</string>
    <string name="profilebloodType">TextView</string>

    <string-array name="labels_array">
        <item>--Select--</item>
        <item>Student</item>
        <item>Working</item>
        <item>Unemployed</item>
    </string-array>
</resources>